# scrum-updates-bot

./: .gitignore  README.md  pyproject.toml  scrum-updates-bot.spec
.github/workflows/: release-packages.yml
docs/: PACKAGING.md
packaging/linux/assets/: scrum-updates-bot.desktop
packaging/linux/debian/: postinst
packaging/windows/: scrum-updates-bot.iss
scripts/: bootstrap_linux.sh  build_deb.sh  build_linux.sh  build_remote_packages.py  build_remote_packages.sh  build_windows.ps1  check_linux_runtime.sh  create_windows_wsl_shortcut.ps1  export_windows_bundle.py  export_windows_bundle.sh  install_linux.sh  install_windows.ps1  run_linux.sh  run_via_wsl.ps1
src/scrum_updates_bot/: __main__.py  main.py
src/scrum_updates_bot/core/: fallbacks.py  models.py  prompts.py  react_agent.py  rendering.py
src/scrum_updates_bot/services/: generator.py  ollama.py  ollama_setup.py
src/scrum_updates_bot/storage/: drafts.py  prompt_templates.py  settings.py
src/scrum_updates_bot/ui/: main_window.py  model_manager.py  workers.py
tests/: test_drafts.py  test_generator.py  test_ollama_setup.py  test_presets.py  test_prompt_templates.py  test_rendering.py
